--- a/matching-game.html
+++ b/matching-game.html
@@ -9,7 +9,7 @@
         <title>Matching Game</title>
     </head>
     <body>
-        <div class="row m-4 px-4">
+        <div class="row m-3 px-4">
             <div class="col">
                 <h1>Matching Game</h1>
                 <p class="text-center mt-3">Can you find the extra smiley face?</p>    
@@ -20,33 +20,36 @@
             </div>
         </div>
 
-        <div id="leftSide" class="bg-dark">
-            <div class="instruction m-4">
-                <p class="intro">
-                <span class="h4">Instruction:</span><br><br> 
+        <div class="container w-50">
+            <div class="row">
+                <div class="scorePanel col mx-3 p-2 text-center">
+                    <p>SCORE</p>
+                    <div id="score"></div>
+                </div>
+                <div class="text-center my-4 px-3 col">
+                    <button type="button" id="btnHint" class="btn btn-dark btn-lg" disabled>Need a Hint?</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="gameContainer">
+            <div id="leftSide" class="gamePanel bg-dark">
+                <div class="m-4" id="instruction">
+                    <p class="intro">
+                    <span class="h4">Instruction:</span><br><br> 
                         When the game starts, there will be three smiley faces shown on the left side and two on the right.<br>
                         The left and right sides are identical except for the left side having one extra face.<br>
                         Each time you click on the correct face, you will be moved onto the next level with one more face than before.<br>
                         If you are stuck, click on the hint button for help. You will be given 5 chances of hint and each time you click on the button, you will lose one chance.<br>
-                </p>
-                <p class="text-center style">
+                    </p>
+                    <p class="text-center style">
                         Are you ready for the game?<br>
                         Hit the start button and have fun!
-                </p>                        
+                    </p>                        
+                </div>
             </div>
-        </div>
-
-        <div id="rightSide" class="bg-dark"></div>
-
-        <div class="container scoreHint">
-            <div id="scorePanel" class=" p-2 text-center">
-                <p class="fst-italic">SCORE</p>
-                <div class="p-2 m-4 text-center" id="score"></div>
-            </div>
-            <div class="hint text-center my-5 p-3">
-                <button type="button" id="btnHint" class="btn btn-dark btn-lg" disabled>Need a Hint?</button>
-            </div>
-        </div>
+            <div id="rightSide" class="gamePanel bg-dark"></div>
+        </div>   
   
         <script src="scripts.js"></script>
     </body>
